--- a/datasets/Untitled.ipynb
+++ b/datasets/Untitled.ipynb
@@ -250,13 +250,272 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "image_name = str(labels.iloc[idx, 1])\n",
-    "image_path = os.path.join(root_dir, image_name)\n"
+    "def get_bbox_face_detection(image, face_detector):\n",
+    "    \n",
+    "    bboxes, kpss = face_detector.detect(image, input_size=(640, 640))\n",
+    "    bboxes_b = bboxes[:, 0:4]\n",
+    "    bboxes_b = bboxes_b.astype('int32')\n",
+    "    #  postprocess bounding boxes\n",
+    "    x, y, w, h = [[box[0], box[1], box[2] - box[0], box[3] - box[1]]  for box in bboxes_b][0]\n",
+    "    # face = image[y:y+h, x:x+w]\n",
+    "    return x, y, w, h"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "frame0vid5_3_10_1.jpg\n",
+      "frame0vid1_2_02_1.jpg\n",
+      "frame0vid1_3_06_4.jpg\n",
+      "frame0vid1_1_04_2.jpg\n",
+      "frame0vid1_3_02_1.jpg\n",
+      "frame0vid1_1_07_4.jpg\n",
+      "frame0vid1_3_09_1.jpg\n",
+      "frame0vid1_2_05_5.jpg\n",
+      "frame0vid3_1_06_2.jpg\n",
+      "frame0vid1_1_05_4.jpg\n",
+      "frame0vid5_1_09_1.jpg\n",
+      "frame1vid1_3_10_1.jpg\n",
+      "frame0vid2_3_04_2.jpg\n",
+      "frame0vid1_2_07_3.jpg\n",
+      "frame0vid1_2_06_3.jpg\n",
+      "frame0vid2_2_06_1.jpg\n",
+      "frame3vid5_3_05_1.jpg\n",
+      "frame0vid2_3_03_4.jpg\n",
+      "frame0vid1_2_02_5.jpg\n",
+      "frame1vid1_2_09_1.jpg\n",
+      "frame0vid3_3_03_2.jpg\n",
+      "frame0vid3_3_09_1.jpg\n",
+      "frame0vid6_2_09_1.jpg\n",
+      "frame0vid1_2_03_1.jpg\n",
+      "frame0vid2_3_05_5.jpg\n",
+      "frame0vid4_3_06_1.jpg\n",
+      "frame4vid1_1_05_1.jpg\n",
+      "frame0vid1_2_08_1.jpg\n",
+      "frame0vid1_3_06_1.jpg\n",
+      "frame0vid1_3_06_3.jpg\n",
+      "frame0vid2_2_05_2.jpg\n",
+      "frame0vid1_3_06_2.jpg\n",
+      "frame0vid3_1_10_1.jpg\n",
+      "frame0vid2_2_03_2.jpg\n",
+      "frame0vid3_1_08_4.jpg\n",
+      "frame0vid2_2_07_4.jpg\n",
+      "frame0vid1_1_05_5.jpg\n",
+      "frame0vid1_2_04_2.jpg\n",
+      "frame1vid2_1_10_1.jpg\n",
+      "frame1vid1_3_07_1.jpg\n",
+      "frame4vid2_2_05_1.jpg\n",
+      "frame0vid4_1_10_1.jpg\n",
+      "frame0vid1_2_08_5.jpg\n",
+      "frame0vid2_3_04_3.jpg\n",
+      "frame0vid5_2_09_1.jpg\n",
+      "frame0vid4_3_03_1.jpg\n",
+      "frame0vid1_2_05_3.jpg\n",
+      "frame0vid1_1_02_2.jpg\n",
+      "frame0vid6_2_08_1.jpg\n",
+      "frame0vid4_1_06_1.jpg\n",
+      "frame0vid1_2_06_5.jpg\n",
+      "frame0vid3_3_06_1.jpg\n",
+      "frame0vid1_1_06_2.jpg\n",
+      "frame0vid1_2_08_4.jpg\n",
+      "frame0vid3_1_08_5.jpg\n",
+      "frame0vid2_1_08_1.jpg\n",
+      "frame3vid4_2_05_1.jpg\n",
+      "frame0vid1_1_08_1.jpg\n",
+      "frame0vid1_1_07_1.jpg\n",
+      "frame0vid5_1_07_1.jpg\n",
+      "frame0vid3_3_10_1.jpg\n",
+      "frame0vid2_3_07_2.jpg\n",
+      "frame0vid2_2_06_2.jpg\n",
+      "frame0vid6_3_08_1.jpg\n",
+      "frame1vid2_1_09_1.jpg\n",
+      "frame0vid3_1_04_2.jpg\n",
+      "frame0vid3_3_07_1.jpg\n",
+      "frame0vid3_3_03_1.jpg\n",
+      "frame0vid1_2_10_1.jpg\n",
+      "frame3vid4_3_05_1.jpg\n",
+      "frame0vid1_2_07_1.jpg\n",
+      "frame0vid1_1_08_4.jpg\n",
+      "frame0vid2_2_08_5.jpg\n",
+      "frame0vid1_2_06_2.jpg\n",
+      "frame4vid1_2_05_1.jpg\n",
+      "frame0vid1_1_03_5.jpg\n",
+      "frame0vid1_2_07_5.jpg\n",
+      "frame0vid2_3_02_1.jpg\n",
+      "frame0vid2_3_06_5.jpg\n",
+      "frame0vid2_2_02_1.jpg\n",
+      "frame0vid1_3_04_2.jpg\n",
+      "frame0vid2_2_04_4.jpg\n",
+      "frame0vid2_3_07_5.jpg\n",
+      "frame0vid5_3_09_1.jpg\n",
+      "frame3vid5_2_05_1.jpg\n",
+      "frame0vid2_2_08_4.jpg\n",
+      "frame0vid4_1_07_1.jpg\n",
+      "frame0vid1_1_10_1.jpg\n",
+      "frame0vid1_2_02_4.jpg\n",
+      "depth\n",
+      "frame0vid1_3_08_4.jpg\n",
+      "frame0vid1_2_07_4.jpg\n",
+      "frame0vid1_1_05_2.jpg\n",
+      "frame0vid3_1_09_1.jpg\n",
+      "frame0vid2_2_05_3.jpg\n",
+      "frame0vid4_3_09_1.jpg\n",
+      "frame1vid1_1_09_1.jpg\n",
+      "frame0vid2_3_06_1.jpg\n",
+      "frame0vid1_3_03_1.jpg\n",
+      "frame0vid1_1_08_5.jpg\n",
+      "frame0vid2_3_06_2.jpg\n",
+      "frame0vid2_2_05_4.jpg\n",
+      "frame0vid1_2_06_4.jpg\n",
+      "frame1vid2_3_10_1.jpg\n",
+      "frame0vid1_3_02_5.jpg\n",
+      "frame0vid1_2_05_2.jpg\n",
+      "frame0vid5_2_10_1.jpg\n",
+      "frame0vid1_1_02_3.jpg\n",
+      "frame0vid2_2_03_4.jpg\n",
+      "frame0vid1_1_09_1.jpg\n",
+      "frame0vid2_2_05_5.jpg\n",
+      "frame0vid3_1_06_3.jpg\n",
+      "frame1vid2_2_10_1.jpg\n",
+      "frame0vid1_1_03_2.jpg\n",
+      "frame1vid1_1_07_1.jpg\n",
+      "frame0vid1_3_07_1.jpg\n",
+      "frame0vid1_1_04_5.jpg\n",
+      "frame1vid1_3_08_1.jpg\n",
+      "frame1vid2_2_09_1.jpg\n",
+      "frame0vid6_3_09_1.jpg\n",
+      "frame0vid1_1_07_5.jpg\n",
+      "frame0vid1_2_04_5.jpg\n",
+      "frame0vid1_2_03_4.jpg\n",
+      "frame0vid1_1_04_1.jpg\n",
+      "frame0vid2_3_08_4.jpg\n",
+      "frame0vid2_2_03_1.jpg\n",
+      "frame0vid2_2_07_3.jpg\n",
+      "frame0vid1_1_03_4.jpg\n",
+      "frame0vid3_1_05_4.jpg\n",
+      "frame0vid1_2_07_2.jpg\n",
+      "frame0vid5_1_03_1.jpg\n",
+      "frame0vid1_2_04_3.jpg\n",
+      "frame0vid1_3_02_2.jpg\n",
+      "frame0vid1_2_03_5.jpg\n",
+      "frame1vid1_2_07_1.jpg\n",
+      "frame0vid1_1_06_5.jpg\n",
+      "frame0vid1_1_06_3.jpg\n",
+      "frame0vid6_3_07_1.jpg\n",
+      "frame0vid6_1_10_1.jpg\n",
+      "frame0vid2_1_02_1.jpg\n",
+      "frame0vid1_1_06_4.jpg\n",
+      "frame0vid2_3_05_2.jpg\n",
+      "frame0vid1_3_05_4.jpg\n",
+      "frame0vid2_2_04_2.jpg\n",
+      "frame0vid3_2_10_1.jpg\n",
+      "frame0vid5_2_06_1.jpg\n",
+      "frame1vid1_2_08_1.jpg\n",
+      "frame0vid2_3_06_4.jpg\n",
+      "frame0vid4_2_09_1.jpg\n",
+      "frame0vid1_3_04_1.jpg\n",
+      "frame0vid4_2_08_1.jpg\n",
+      "frame0vid3_3_04_1.jpg\n",
+      "frame0vid2_2_04_5.jpg\n",
+      "frame0vid5_1_06_1.jpg\n",
+      "frame0vid2_3_09_1.jpg\n",
+      "frame0vid4_2_03_1.jpg\n",
+      "frame0vid2_2_03_3.jpg\n",
+      "frame0vid2_2_08_1.jpg\n",
+      "frame0vid4_1_08_1.jpg\n",
+      "frame0vid2_2_07_1.jpg\n",
+      "frame0vid3_3_08_1.jpg\n",
+      "frame0vid4_1_04_1.jpg\n",
+      "frame0vid4_3_07_1.jpg\n",
+      "frame0vid2_1_06_1.jpg\n",
+      "frame0vid2_1_03_1.jpg\n",
+      "frame0vid1_1_07_3.jpg\n",
+      "frame0vid2_3_03_5.jpg\n",
+      "frame0vid5_1_08_1.jpg\n",
+      "frame0vid4_2_07_1.jpg\n",
+      "frame0vid1_3_02_4.jpg\n",
+      "frame0vid2_2_06_4.jpg\n",
+      "frame0vid2_1_09_1.jpg\n",
+      "frame0vid1_2_02_3.jpg\n",
+      "frame0vid2_3_07_4.jpg\n",
+      "frame0vid4_2_10_1.jpg\n",
+      "frame0vid2_2_09_1.jpg\n",
+      "frame4vid2_1_05_1.jpg\n",
+      "frame0vid1_2_02_2.jpg\n",
+      "frame0vid2_3_06_3.jpg\n",
+      "frame0vid4_3_08_1.jpg\n",
+      "frame1vid1_3_09_1.jpg\n",
+      "frame4vid1_3_05_1.jpg\n",
+      "frame0vid2_2_03_5.jpg\n",
+      "frame0vid1_1_03_1.jpg\n",
+      "frame0vid1_2_06_1.jpg\n",
+      "frame0vid1_2_05_4.jpg\n",
+      "frame0vid1_2_09_1.jpg\n",
+      "frame0vid2_3_04_4.jpg\n",
+      "frame0vid2_3_10_1.jpg\n",
+      "frame0vid4_2_04_1.jpg\n",
+      "frame0vid5_1_10_1.jpg\n",
+      "frame0vid3_3_03_3.jpg\n",
+      "frame0vid2_2_06_5.jpg\n",
+      "frame0vid1_1_06_1.jpg\n",
+      "frame0vid1_3_08_5.jpg\n",
+      "frame0vid2_3_05_3.jpg\n",
+      "frame0vid1_3_08_1.jpg\n",
+      "frame0vid2_2_07_5.jpg\n",
+      "frame0vid4_3_04_1.jpg\n",
+      "frame0vid4_2_06_1.jpg\n",
+      "frame0vid1_2_04_4.jpg\n",
+      "frame0vid6_2_07_1.jpg\n",
+      "frame0vid2_3_07_3.jpg\n",
+      "frame0vid2_1_04_1.jpg\n",
+      "frame0vid2_3_08_5.jpg\n",
+      "frame0vid2_2_07_2.jpg\n",
+      "frame0vid2_3_05_4.jpg\n",
+      "frame0vid1_1_04_3.jpg\n",
+      "frame0vid1_1_07_2.jpg\n",
+      "frame0vid2_1_07_1.jpg\n",
+      "frame0vid1_1_04_4.jpg\n",
+      "frame0vid3_1_06_4.jpg\n",
+      "frame0vid1_1_03_3.jpg\n",
+      "frame0vid4_1_09_1.jpg\n",
+      "frame0vid1_1_02_1.jpg\n",
+      "frame0vid1_1_02_4.jpg\n",
+      "frame0vid2_3_04_5.jpg\n",
+      "frame0vid1_3_10_1.jpg\n",
+      "frame0vid2_2_04_3.jpg\n",
+      "frame0vid2_2_06_3.jpg\n",
+      "frame0vid1_2_04_1.jpg\n",
+      "frame0vid1_1_02_5.jpg\n",
+      "frame1vid1_1_08_1.jpg\n",
+      "frame0vid1_1_05_3.jpg\n",
+      "frame0vid4_1_03_1.jpg\n",
+      "frame3vid5_1_05_1.jpg\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "img_dir = \"/home/yeldar/Documents/Liveness/datasets/sample_dataset/Train_files/\"\n",
+    "for img_n in os.listdir(img_dir):\n",
+    "    print(img_n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
