--- a/datasets/Untitled.ipynb
+++ b/datasets/Untitled.ipynb
@@ -229,28 +229,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from PIL import Image\n",
+    "import matplotlib.pyplot as plt \n",
+    "from scrfd.scrfd import SCRFD \n",
+    "import warnings \n",
+    "import math \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "frame0vid3_3_09_1.jpg /home/yeldar/Documents/Liveness/datasets/sample_dataset/Train_files/frame0vid3_3_09_1.jpg 0\n"
+      "====== SCRFD-500m onnx Face Detector loaded. ======\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/yeldar/anaconda3/envs/dot/lib/python3.8/site-packages/onnxruntime/capi/onnxruntime_inference_collection.py:53: UserWarning: Specified provider 'CUDAExecutionProvider' is not in available provider names.Available providers: 'CPUExecutionProvider'\n",
+      "  warnings.warn(\"Specified provider '{}' is not in available provider names.\"\n"
      ]
     }
    ],
    "source": [
-    "idx = 0\n",
-    "image_name = str(labels.iloc[idx, 1])\n",
-    "image_path = os.path.join(root_dir, image_name)\n",
-    "spoofing_label = labels.iloc[idx, 0]\n",
-    "print(image_name, image_path, spoofing_label)"
+    "face_detector = SCRFD(model_file='./scrfd/scrfd_500m_bnkps.onnx')\n",
+    "face_detector.prepare(1)\n",
+    "print(\"====== SCRFD-500m onnx Face Detector loaded. ======\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +282,8 @@
     "    #  postprocess bounding boxes\n",
     "    x, y, w, h = [[box[0], box[1], box[2] - box[0], box[3] - box[1]]  for box in bboxes_b][0]\n",
     "    # face = image[y:y+h, x:x+w]\n",
-    "    return x, y, w, h"
+    "    return x, y, w, h\n",
+    "\n"
    ]
   },
   {
@@ -504,10 +525,11 @@
     }
    ],
    "source": [
-    "import os\n",
     "img_dir = \"/home/yeldar/Documents/Liveness/datasets/sample_dataset/Train_files/\"\n",
     "for img_n in os.listdir(img_dir):\n",
-    "    print(img_n)"
+    "    img_path = os.path.join(img_dir, img_n)\n",
+    "     x, y, w, h = get_bbox_face_detection(img_path, face_detector)\n",
+    "        image_x = cv2.resize(crop_face_from_scene(image_x_temp, [y, x, w, h], face_scale), (self.img_size, self.img_size))"
    ]
   },
   {
