Starting modifying code for our BIG Datasets

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -4,72 +4,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Unpacking Nurma's dataset "
+    "# Datasets preparation. 1. Creating labels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "6680d6e1-d4a3-45da-b138-252c1803b830",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import pandas as pd"
+    "import pandas as pd\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "b50f6d12-156a-44c7-b2a7-7664e393588d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gen_csv(dirr):\n",
+    "def generate_labels_csv(dirr):\n",
     "    train_files = os.listdir(dirr)\n",
     "    df = pd.DataFrame(columns=[\"label\", \"fname\"])\n",
     "    df[\"fname\"] = train_files\n",
-    "    if 'live' in dirr:\n",
-    "        df[\"label\"] = 0\n",
-    "    else:\n",
+    "    if 'spoof' in dirr:\n",
     "        df[\"label\"] = 1\n",
+    "    else:\n",
+    "        df[\"label\"] = 0\n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "014309c0-9800-42e5-849b-5e5ce36af310",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dirr1 = \"train/live\"\n",
-    "dirr2 = \"train/spoof\"\n",
-    "df = pd.concat([gen_csv(dirr1), gen_csv(dirr2)])\n",
-    "df.to_csv(\"train_list.csv\")"
+    "dirr1 = \"/media/yeldar/C4EBBAE4D0BBE84F/0.0_padded_liveness_dataset/val/1_300x300/live\"\n",
+    "dirr2 = \"/media/yeldar/C4EBBAE4D0BBE84F/0.0_padded_liveness_dataset/val/1_300x300/spoof\"\n",
+    "df = pd.concat([generate_labels_csv(dirr1), generate_labels_csv(dirr2)])\n",
+    "df.to_csv(\"/media/yeldar/C4EBBAE4D0BBE84F/0.0_padded_liveness_dataset/val/val_csv.csv\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "28be4f4a-f662-4213-80f0-d1773bb561c6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<bound method Series.unique of 0      frame0vid3_3_09_1.jpg\n",
-       "1      frame4vid2_2_05_1.jpg\n",
-       "2      frame0vid3_3_10_1.jpg\n",
-       "3      frame0vid3_2_10_1.jpg\n",
-       "4      frame0vid2_3_06_1.jpg\n",
-       "               ...          \n",
-       "106    frame0vid1_3_02_4.jpg\n",
-       "107    frame0vid1_2_02_4.jpg\n",
-       "108    frame0vid1_2_02_5.jpg\n",
-       "109    frame0vid1_3_02_5.jpg\n",
-       "110    frame0vid1_2_04_3.jpg\n",
-       "Name: fname, Length: 225, dtype: object>"
+       "30467"
       ]
      },
      "execution_count": 12,
@@ -78,12 +66,56 @@
     }
    ],
    "source": [
-    "df['fname'].unique"
+    "len(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Merging live and spoof images into one folder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def merge_folders(dir1, dir2, dest):\n",
+    "    for fl in os.listdir(dir1):\n",
+    "        cur_p = os.path.join(dir1, fl)\n",
+    "        dst_p = os.path.join(dest, fl)\n",
+    "        os.rename(cur_p, dst_p)\n",
+    "    for fl2 in os.listdir(dir2):\n",
+    "        cur_p = os.path.join(dir2, fl2)\n",
+    "        dst_p = os.path.join(dest, fl2)\n",
+    "        os.rename(cur_p, dst_p)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dirr1 = \"/media/yeldar/C4EBBAE4D0BBE84F/0.0_padded_liveness_dataset/val/1_300x300/live\"\n",
+    "dirr2 = \"/media/yeldar/C4EBBAE4D0BBE84F/0.0_padded_liveness_dataset/val/1_300x300/spoof\"\n",
+    "dest = \"/media/yeldar/C4EBBAE4D0BBE84F/0.0_padded_liveness_dataset/Val_files\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# merge_folders(dirr1, dirr2, dest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,9 +249,9 @@
     }
    ],
    "source": [
-    "image_dir = \"/home/yeldar/Documents/Liveness/datasets/\"\n",
+    "image_dir = \"/home/yeldar/Documents/Liveness/datasets/sample_dataset\"\n",
     "CUSTOM_Train = dataset_info()\n",
-    "CUSTOM_Train.root_dir = os.path.join(image_dir, \"sample_dataset\")\n",
+    "CUSTOM_Train.root_dir = os.path.join(image_dir, \"Custom\")\n",
     "data_dir = CUSTOM_Train.root_dir\n",
     "root_dir = os.path.join(data_dir, \"Train_files\")\n",
     "info_list = os.path.join(data_dir, \"train_list.csv\")\n",
@@ -879,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -896,6 +928,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "torch.Size([8, 256, 256, 3])\n",
+      "torch.Size([8, 256, 256, 3])\n",
+      "torch.Size([8, 256, 256, 3])\n",
+      "torch.Size([8, 256, 256, 3])\n",
+      "torch.Size([8, 256, 256, 3])\n",
+      "torch.Size([8, 256, 256, 3])\n",
+      "torch.Size([8, 256, 256, 3])\n",
+      "torch.Size([8, 256, 256, 3])\n",
+      "torch.Size([8, 256, 256, 3])\n",
+      "torch.Size([8, 256, 256, 3])\n",
+      "torch.Size([8, 256, 256, 3])\n",
+      "torch.Size([8, 256, 256, 3])\n",
       "torch.Size([8, 256, 256, 3])\n"
      ]
     }
