--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -115,6 +115,86 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "19\n",
+      "29\n",
+      "39\n",
+      "49\n",
+      "59\n",
+      "69\n",
+      "79\n",
+      "89\n",
+      "99\n"
+     ]
+    }
+   ],
+   "source": [
+    "for epoch in range(1, 100):\n",
+    "    epoch_test = 10\n",
+    "    if epoch % epoch_test == epoch_test-1:\n",
+    "        print(epoch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = cv2.imread(\"d1.jpeg\")\n",
+    "gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv2.imshow('Original image',img)\n",
+    "cv2.imshow('Gray image', gray)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(662, 451, 3)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "img.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
