Commiting local pc version

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -288,62 +288,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cv2"
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import os\n",
+    "from networks import get_model\n",
+    "from datasets import data_merge\n",
+    "from optimizers import get_optimizer\n",
+    "from torch.utils.data import DataLoader\n",
+    "from transformers import *\n",
+    "from utils import *\n",
+    "from configs import parse_args\n",
+    "import time\n",
+    "import numpy as np\n",
+    "import random\n",
+    "from loss import *\n",
+    "\n",
+    "\n",
+    "torch.manual_seed(16)\n",
+    "np.random.seed(16)\n",
+    "random.seed(16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_dir = \"/home/yeldar/Documents/Liveness/datasets/sample_dataset/Custom/joined/train\"\n",
+    "\n",
+    "data_bank = data_merge(data_dir)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "img = cv2.imread(\"d1.jpeg\")\n",
-    "gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv2.imshow('Original image',img)\n",
-    "cv2.imshow('Gray image', gray)\n",
-    "cv2.waitKey(0)\n",
-    "cv2.destroyAllWindows()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(662, 451, 3)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'args' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/yeldar/Documents/Liveness/SSAN/Untitled.ipynb Cell 16\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/yeldar/Documents/Liveness/SSAN/Untitled.ipynb#X25sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m test_data_dic \u001b[39m=\u001b[39m data_bank\u001b[39m.\u001b[39mget_datasets(train\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m, protocol\u001b[39m=\u001b[39margs\u001b[39m.\u001b[39mprotocol, img_size\u001b[39m=\u001b[39margs\u001b[39m.\u001b[39mimg_size, transform\u001b[39m=\u001b[39mtransformer_test_video(), debug_subset_size\u001b[39m=\u001b[39margs\u001b[39m.\u001b[39mdebug_subset_size)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'args' is not defined"
+     ]
     }
    ],
    "source": [
-    "img.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Trying inference on one image"
+    "test_data_dic = data_bank.get_datasets(train=False, protocol=, img_size=args.img_size, transform=transformer_custom(), debug_subset_size=args.debug_subset_size)\n",
+    "\n"
    ]
   },
   {
