--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -869,89 +869,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 7,
    "id": "07b8ddc0",
    "metadata": {},
    "outputs": [],
    "source": [
     "tp = 'train'\n",
-    "train_csv = f'/mnt/8TB/ml_projects_yeldar/patchnet/{tp}/{tp}_list11.csv'\n",
+    "train_csv = f'./data/{tp}_list11.csv'\n",
     "df = pd.read_csv(train_csv)\n",
     "# df['fname'] = df['fname'].apply(lambda x: x.replace('/mnt/8TB/ml_projects_yeldar/', '/data_dir/'))\n",
-    "df['fname'] = df['fname'].apply(lambda x: x.replace('/data_dir/', 'data_dir/'))\n",
+    "df['fname'] = df['fname'].apply(lambda x: x.replace('/patchnet/', '/'))\n",
     "df.to_csv(f'/mnt/8TB/ml_projects_yeldar/patchnet/{tp}/{tp}_list11.csv', index=False)          "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "id": "c7528693",
+   "execution_count": 2,
+   "id": "a31555a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ee054e4f",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fname</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>data_dir/M1_3_4_val/live/vid_13238_frameNr_129...</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>data_dir/M1_3_4_val/live/d356ab48-1084-468b-92...</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>data_dir/M1_3_4_val/live/7c019758-d12d-4108-aa...</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>data_dir/M1_3_4_val/live/2add8adb-0e72-4c0f-a4...</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>data_dir/M1_3_4_val/live/b928a6a2-98d6-4be8-8d...</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16839</th>\n",
+       "      <td>data_dir/M1_3_4_val/live/live_002077_000002.jpg</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16840</th>\n",
+       "      <td>data_dir/M1_3_4_val/live/live_002077_000003.jpg</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16841</th>\n",
+       "      <td>data_dir/M1_3_4_val/live/live_002077_000004.jpg</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16842</th>\n",
+       "      <td>data_dir/M1_3_4_val/live/live_002078_000001.jpg</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16843</th>\n",
+       "      <td>data_dir/M1_3_4_val/live/live_002078_000002.jpg</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>16844 rows × 2 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array([[[255, 255, 255],\n",
-       "        [255, 255, 255],\n",
-       "        [255, 255, 255],\n",
-       "        ...,\n",
-       "        [255, 255, 255],\n",
-       "        [255, 255, 255],\n",
-       "        [255, 255, 255]],\n",
+       "                                                   fname  label\n",
+       "0      data_dir/M1_3_4_val/live/vid_13238_frameNr_129...    1.0\n",
+       "1      data_dir/M1_3_4_val/live/d356ab48-1084-468b-92...    1.0\n",
+       "2      data_dir/M1_3_4_val/live/7c019758-d12d-4108-aa...    1.0\n",
+       "3      data_dir/M1_3_4_val/live/2add8adb-0e72-4c0f-a4...    1.0\n",
+       "4      data_dir/M1_3_4_val/live/b928a6a2-98d6-4be8-8d...    1.0\n",
+       "...                                                  ...    ...\n",
+       "16839    data_dir/M1_3_4_val/live/live_002077_000002.jpg    1.0\n",
+       "16840    data_dir/M1_3_4_val/live/live_002077_000003.jpg    1.0\n",
+       "16841    data_dir/M1_3_4_val/live/live_002077_000004.jpg    1.0\n",
+       "16842    data_dir/M1_3_4_val/live/live_002078_000001.jpg    1.0\n",
+       "16843    data_dir/M1_3_4_val/live/live_002078_000002.jpg    1.0\n",
        "\n",
-       "       [[255, 255, 255],\n",
-       "        [255, 255, 255],\n",
-       "        [255, 255, 255],\n",
-       "        ...,\n",
-       "        [255, 255, 255],\n",
-       "        [255, 255, 255],\n",
-       "        [255, 255, 255]],\n",
-       "\n",
-       "       [[255, 255, 255],\n",
-       "        [255, 255, 255],\n",
-       "        [255, 255, 255],\n",
-       "        ...,\n",
-       "        [255, 255, 255],\n",
-       "        [255, 255, 255],\n",
-       "        [255, 255, 255]],\n",
-       "\n",
-       "       ...,\n",
-       "\n",
-       "       [[255, 255, 255],\n",
-       "        [255, 255, 255],\n",
-       "        [255, 255, 255],\n",
-       "        ...,\n",
-       "        [255, 255, 255],\n",
-       "        [255, 255, 255],\n",
-       "        [255, 255, 255]],\n",
-       "\n",
-       "       [[255, 255, 255],\n",
-       "        [255, 255, 255],\n",
-       "        [255, 255, 255],\n",
-       "        ...,\n",
-       "        [255, 255, 255],\n",
-       "        [255, 255, 255],\n",
-       "        [255, 255, 255]],\n",
-       "\n",
-       "       [[255, 255, 255],\n",
-       "        [255, 255, 255],\n",
-       "        [255, 255, 255],\n",
-       "        ...,\n",
-       "        [255, 255, 255],\n",
-       "        [255, 255, 255],\n",
-       "        [255, 255, 255]]], dtype=uint8)"
+       "[16844 rows x 2 columns]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import cv2\n",
-    "ipath = 'images/main.png'\n",
-    "a = cv2.imread(ipath)\n",
-    "a"
+    "tp = 'val'\n",
+    "train_csv = f'./data/{tp}_list11.csv'\n",
+    "df = pd.read_csv(train_csv)\n",
+    "# df['fname'] = df['fname'].apply(lambda x: x.replace('/data_dir/', 'data_dir/'))\n",
+    "\n",
+    "df"
    ]
   },
   {
